kube-resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server-demo
spec:
  selector:
    app: api-server-demo
  ports:
    - name: http
      port: 8899
      protocol: TCP
      targetPort: 8899
